Listing and Removing Articles from the Collection

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,6 +5,6 @@
   </p>
   <p class="my-5">
     <strong class="block font-medium mb-1">Author:</strong>
-    <%= article.author_id %>
+    <%= article.author.name %>
   </p>
 </div>
