--- a/app/views/collections/_collection.html.erb
+++ b/app/views/collections/_collection.html.erb
@@ -7,6 +7,10 @@
     <strong class="block font-medium mb-1">Articles: </strong>
     <% if action_name =='show' %>
     <%= render partial: 'articles_form', locals: {collection: @collection} %>
+    <% collection.articles.each do |article| %>
+      <%= render article %>
+      <%= button_to "Remover", remove_article_collection_path(collection, article_ids: article.id), method: :delete%>
+    <%end%>
     <% else %>
       <%= collection.articles.count %>
     <% end %>
