--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,25 +1,14 @@
-<% content_for :title, "Authors" %>
-
 <div class="w-full">
   <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
+    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Authors</h1>
-    <%= link_to "New author", new_author_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
+    <%= link_to 'New author', new_author_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="authors" class="min-w-full">
-    <% if @authors.any? %>
-      <% @authors.each do |author| %>
-        <%= render author %>
-        <p>
-          <%= link_to "Show this author", author, class: "ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-        </p>
-      <% end %>
-    <% else %>
-      <p class="text-center my-10">No authors found.</p>
-    <% end %>
+    <%= render @authors %>
   </div>
 </div>
